Closed Bug 1646009 Opened 5 years ago Closed 5 years ago

several Promise.any related test failures when Gecko 79 merges to Beta on 2020-06-29

Categories

(Core :: JavaScript: Standard Library, defect)

defect

Tracking

()

VERIFIED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox77 --- unaffected
firefox78 --- unaffected
firefox79 + verified

People

(Reporter: aryx, Assigned: jorendorff)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Assignee: nobody → jorendorff
Status: NEW → ASSIGNED
Pushed by jorendorff@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/06049511edba Enable AggregateError in all branches, along with Promise.any. r=jwalden.
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Flags: needinfo?(jorendorff)
Regressions: 1647066
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: