Bug 1646009 - Enable AggregateError in all branches, along with Promise.any. r=jwalden.

Differential Revision: https://phabricator.services.mozilla.com/D80115